Added status info for NotificationListener service

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -425,4 +425,5 @@
 		
 	<string name="settings_SMS_with_alert_desc_on">Show alert before the message</string>
 	<string name="settings_SMS_with_alert_desc_off">Only show the new message</string>
+	<string name="status_notification_listener_enabled">Notification Listener Service Enabled.</string>
 </resources>
